--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
     "express": "4.13.3",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
