--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "babel-cli": "6.14.0",
     "babel-core": "6.14.0",
+    "body-parser": "^1.17.2",
     "express": "4.13.3",
     "mocha": "^3.4.2",
     "redux-thunk": "^2.2.0"
