--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "babel-core": "6.14.0",
     "body-parser": "^1.17.2",
     "express": "4.13.3",
-    "mocha": "^3.4.2",
-    "redux-thunk": "^2.2.0"
+    "mocha": "^3.4.2"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
